--- a/challenge_1/style.css
+++ b/challenge_1/style.css
@@ -1,15 +1,34 @@
+#header {
+  text-align: center;
+}
+
+table {
+  width: fit-content;
+  margin: auto;
+  padding: 10px; 
+  border: 4px solid gray;
+}
+
+h2#game_over {
+  min-height: 30px;
+}
+
 td {
-  width: 50px;
-  height: 50px;
-  border: 1px dashed black;
+  width: 100px;
+  height: 100px;
+  border: 2px dashed black;
+  font-size: 80px;
+  text-align: center;
 }
 
 td.active {
-  border: 1px solid green;
+  border: 2px solid green;
 }
 
 button#new_game {
   visibility: hidden;
+  margin-left: 42%;
+  width: 16%;
 }
 
 button#new_game.active {
